<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">moko-app</string>
    <string name="no_data">No data</string>
    <string name="submit_btn">Submit</string>
    <string name="token_hint">API token</string>
    <string name="language_hint">Language code</string>
    <string name="retry_btn">Retry</string>
    <string name="textview_enter_amount">Please enter kg amount</string>
    <string name="amount_placeholder">enter amount here</string>
    <string name="kilo">kg</string>
    <string name="button_buy">Buy!</string>
    <string name="check_camera_permissions">Check camera permissions</string>
    <string name="card_number">enter card number</string>
    <string name="edittext_cardHolder">enter card holder</string>
    <string name="edittext_cvcCode">enter cvc card code</string>
</resources>