<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="org.example.library.feature.logictest.presentation.TestViewModel" />
        <import type="android.view.View" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textviewEnterAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/textview_enter_amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputEnterAmount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textviewEnterAmount">

            <EditText
                android:id="@+id/edittextEnterAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:hint="@string/amount_placeholder"
                android:singleLine="true"
                android:text="@={viewmodel.amount.ld}"
                android:inputType="numberDecimal"
                android:autofillHints="@string/amount_placeholder" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:maxLines="1"
            android:text="@string/kilo"
            app:layout_constraintBottom_toBottomOf="@+id/TextInputEnterAmount"
            app:layout_constraintLeft_toRightOf="@+id/TextInputEnterAmount"
            app:layout_constraintTop_toTopOf="@+id/TextInputEnterAmount" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            app:enabled="@{viewmodel.isBuyButtonEnabled.ld}"
            android:onClick="@{() -> viewmodel.onButtonPressed()}"
            android:text="@string/button_buy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputEnterAmount" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:onClick="@{() -> viewmodel.onButtonPhotoPressed()}"
            android:text="@string/check_camera_permissions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonApply" />

        <ProgressBar
            android:id="@+id/progressBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="50dp"
            android:visibility="@{viewmodel.isLoading.ld ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>