<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="org.example.library.feature.logictest.presentation.FieldsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputEnterPan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginEnd="@dimen/card_margin"
            app:error="@{viewmodel.panField.error.ld}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextNumberCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginEnd="@dimen/card_margin"
                android:hint="@string/card_number"
                android:maxLength="19"
                android:singleLine="true"
                android:text="@={viewmodel.panField.data.ld}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputEnterHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginEnd="@dimen/card_margin"
            app:error="@{viewmodel.holderField.error.ld()}"
            app:layout_constraintLeft_toLeftOf="@+id/TextInputEnterPan"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputEnterPan">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextCardHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_margin"
                android:hint="@string/edittext_cardHolder"
                android:singleLine="true"
                android:text="@={viewmodel.holderField.data.ld()}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputEnterCvc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginEnd="@dimen/card_margin"
            app:error="@{viewmodel.cvcField.error.ld()}"
            app:layout_constraintLeft_toLeftOf="@+id/TextInputEnterHolder"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputEnterHolder">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextCvcCode"
                android:layout_width="match_parent"
                android:maxLength="3"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_margin"
                android:hint="@string/edittext_cvcCode"
                android:singleLine="true"
                android:text="@={viewmodel.cvcField.data.ld()}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:onClick="@{() -> viewmodel.validation()}"
            android:text="@string/button_buy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputEnterCvc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
